// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SpinnerRound matches the snapshot 1`] = `
<div>
  <svg
    fill="none"
    style="color: rgb(255, 255, 255); overflow: visible; width: 100px;"
    viewBox="0 0 66 66"
  >
    <circle
      cx="33"
      cy="33"
      fill="none"
      r="28"
      stroke="currentColor"
      stroke-width="1.5"
      style="animation: spinners-react-round 14s ease-in-out infinite; transform-origin: center;"
    />
  </svg>
</div>
`;

exports[`SpinnerRound matches the snapshot with default props 1`] = `
<div>
  <svg
    fill="none"
    style="color: rgb(56, 173, 72); overflow: visible; width: 50px;"
    viewBox="0 0 66 66"
  >
    <circle
      cx="33"
      cy="33"
      fill="none"
      r="28"
      stroke="currentColor"
      stroke-width="3"
      style="animation: spinners-react-round 1.4s ease-in-out infinite; transform-origin: center;"
    />
  </svg>
</div>
`;
